--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,11 +2,15 @@ project:
   type: website
 
 website:
-  title: "victoriapeechatt.github.io"
+  title: "Victoria Peechatt"
   navbar:
     left:
       - href: index.qmd
         text: Home
+      - href: research.qmd
+        text: Research
+      - href: outreach.qmd
+        text: Outreach
       - about.qmd
 
 format:
